--- a/index.html
+++ b/index.html
@@ -87,13 +87,20 @@
   </section>
 
   <!-- Section: Icon Boxes -->
-  <section class="section section-icons grey lighten-4 center">
+  <section id ="aboutMe" class="section section-icons grey lighten-4 center">
     <div class="container">
       <div class="row">
-        <div class="col s12 m4">
-          <img src="images/img1.jpg" width="200" height="250">
+        <div class="col s12 m3">
+          <img src="images/jav2.jpg" width="200" height="250">
         </div>
-        <div class="col s12 m4">
+        <div class="col s12 m6">
+          <div class="card-panel">
+            <i class="fa fa-user fa-4x"></i>
+            <h5>About Me</h5>
+            <p>Father of 2 young boys, Navy Veteran, Car Salesman turned Web Developer. Originally from Bethlehem, Pa. Enlisted in the US. Navy out of High School, got to travel the world and make some of the strongest relationships of my life. Once I seperated I found myself settling into Oklahoma City after a short stay back in Pennsylvania and Arizona. While in Oklahoma I met my wife, had my first child and got life back in order. My wife and I relocated I hope for the final time in my lifetime, to Austin, where we have made our first home purchase and are expecting our second child. </p>
+          </div>
+        </div>
+        <div class="col s6 m3">
           <div class="card-panel">
             <i class="fab fa-github fa-4x"></i>
             <h4><a href="https://github.com/vegajavier">Projects</a></h4>
@@ -158,7 +165,7 @@
           <a href="#" class="white-text">
             <i class="fab fa-twitter fa-4x"></i>
           </a>
-          <a href="#" class="white-text">
+          <a href="https://github.com/vegajavier" class="white-text">
             <i class="fab fa-github fa-4x"></i>
           </a>
 
@@ -175,7 +182,8 @@
           <div class="card-panel blue-grey lighten-1 white-text center">
             <i class="material-icons">email</i>
             <h5>Contact Me</h5>
-            <p></p>
+            <p>Email : vegajavier86@gmail.com</p>
+            <p>Mobile : 570-580-2748</p>
           </div>
 
         </div>
