--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <span class="">Recent </span> Creations</h4>
         <!-- cards for project links-->
         <div class="row">
-          <div class="col s12 m5">
+          <div class="col m12 m6">
             <div class="card">
               <div class="card-image">
                 <img src="images/img3.png">
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s12 m5">
+          <div class="col m12 m6">
             <div class="card">
               <div class="card-image">
                 <img src="images/img4.jpg">
@@ -146,6 +146,22 @@
               </div>
               <div class="card-action">
                 <a href="https://vegajavier.github.io/DJGio/">DJ Gio</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/MadJ.jpeg">
+                <span class="card-title">Mad J's BBQ</span>
+              </div>
+              <div class="card-content">
+                <p>Web Design is still under construction. Authentication, Order Processing.</p>
+              </div>
+              <div class="card-action">
+                <a href="https://vegajavier.github.io/madJBBQ/">Mad J's</a>
               </div>
             </div>
           </div>
