--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <span class="card-title">EZ Musik</span>
               </div>
               <div class="card-content">
-                <p>Web Design is still under construction.</p>
+                <p>Web Design is still under construction. Music will autoplay, adjust volume before opening.</p>
               </div>
               <div class="card-action">
                 <a href="https://vegajavier.github.io/ezmusik/">EZ Musik</a>
@@ -142,7 +142,7 @@
                 <span class="card-title">DJ Gio</span>
               </div>
               <div class="card-content">
-                <p>Web Design is still under construction.</p>
+                <p>Web Design is still under construction. Music will autoplay, adjust volume before opening. </p>
               </div>
               <div class="card-action">
                 <a href="https://vegajavier.github.io/DJGio/">DJ Gio</a>
