--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
         <div class="">
           <h4>Follow Javier Vega</h4>
           <p></p>
-          <a href="#" class="white-text">
-            <i class="fab fa-facebook fa-4x"></i>
+          <a href="https://www.linkedin.com/in/javier-vega-11427b70/" class="white-text">
+            <i class="fab fa-linkedin fa-4x"></i>
           </a>
-          <a href="#" class="white-text">
+          <a href="https://twitter.com/borininer49" class="white-text">
             <i class="fab fa-twitter fa-4x"></i>
           </a>
           <a href="https://github.com/vegajavier" class="white-text">
