--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
           <div class="card-panel">
             <i class="fa fa-user fa-4x"></i>
             <h5>About Me</h5>
-            <p>Father of 2 young boys, Navy Veteran, Car Salesman turned Web Developer. Originally from Bethlehem, Pa. Enlisted in the US. Navy out of High School, got to travel the world and make some of the strongest relationships of my life. Once I seperated I found myself settling into Oklahoma City after a short stay back in Pennsylvania and Arizona. While in Oklahoma I met my wife, had my first child and got life back in order. My wife and I relocated I hope for the final time in my lifetime, to Austin, where we have made our first home purchase and are expecting our second child. </p>
+            <p>Proud father of 2 boys, and happily married. Living in Manor, TX. After quiet a bit of moving around and finally settling here in Texas. I am a Navy Veteran, serving during Operation Iraqi Freedeom, and Operation Enduring Freedom. After some job changes I decided to take advantage of my military benefits and take a certification course for Full Stack Web Development. My personal strengths currently are responsive layouts using Bootstrap and similar libraries, HTML5, CSS3, and some javascript. I have an entry-level knowledge of React.js, Node.js and basic understanding of the use of Mongo, MySql.
+            </p>
           </div>
         </div>
         <div class="col s6 m3">
