small changes, added another repo to creations

--- a/index.html
+++ b/index.html
@@ -119,54 +119,72 @@
         <h4 class="center">
           <span class="">Recent </span> Creations</h4>
         <!-- cards for project links-->
-        <div class="row">
-          <div class="col m12 m6">
+
+        <div class="row ">
+          <div class = "col s12">
+          <div class="col m6">
             <div class="card">
               <div class="card-image">
                 <img src="images/img3.png">
                 <span class="card-title">EZ Musik</span>
               </div>
               <div class="card-content">
-                <p>Web Design is still under construction. Music will autoplay, adjust volume before opening.</p>
+                <p></p>
               </div>
               <div class="card-action">
                 <a href="https://vegajavier.github.io/ezmusik/">EZ Musik</a>
               </div>
             </div>
           </div>
-        </div>
         <div class="row">
-          <div class="col m12 m6">
+          <div class="col m6">
             <div class="card">
               <div class="card-image">
                 <img src="images/img4.jpg">
                 <span class="card-title">DJ Gio</span>
               </div>
               <div class="card-content">
-                <p>Web Design is still under construction. Music will autoplay, adjust volume before opening. </p>
+                <p></p>
               </div>
               <div class="card-action">
                 <a href="https://vegajavier.github.io/DJGio/">DJ Gio</a>
               </div>
             </div>
           </div>
-        </div>
+    
         <div class="row">
-          <div class="col m12 m6">
+          <div class="col m6">
             <div class="card">
               <div class="card-image">
                 <img src="images/MadJ.jpeg">
                 <span class="card-title">Mad J's BBQ</span>
               </div>
               <div class="card-content">
-                <p>Web Design is still under construction. Authentication, Order Processing.</p>
+                <p></p>
               </div>
               <div class="card-action">
                 <a href="https://vegajavier.github.io/madJBBQ/">Mad J's</a>
               </div>
             </div>
           </div>
+        <div class="row">
+          <div class="col m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/pod.jpeg">
+                <span class="card-title">4th & Gold Podcast</span>
+              </div>
+              <div class="card-content">
+                <p></p>
+              </div>
+              <div class="card-action">
+                <a href="https://4th-gold-erfy59zm9.now.sh/index.html">4th & Gold Podcast</a>
+              </div>
+            </div>
+          </div>
         </div>
+   
+
   </section>
 
   <!-- Section: Follow -->
