--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div class="col m6">
             <div class="card">
               <div class="card-image">
-                <img src="images/img3.png">
+                <img src="images/img3.png" height= "200px" width="200px">
                 <span class="card-title">EZ Musik</span>
               </div>
               <div class="card-content">
@@ -140,7 +140,7 @@
           <div class="col m6">
             <div class="card">
               <div class="card-image">
-                <img src="images/img4.jpg">
+                <img src="images/img4.jpg " height= "200px" width="200px">
                 <span class="card-title">DJ Gio</span>
               </div>
               <div class="card-content">
@@ -156,7 +156,7 @@
           <div class="col m6">
             <div class="card">
               <div class="card-image">
-                <img src="images/MadJ.jpeg">
+                <img src="images/MadJ.jpeg" height= "200px" width="200px">
                 <span class="card-title">Mad J's BBQ</span>
               </div>
               <div class="card-content">
@@ -171,7 +171,7 @@
           <div class="col m6">
             <div class="card">
               <div class="card-image">
-                <img src="images/pod.jpeg">
+                <img src="images/pod.jpeg" height= "200px" width="200px">
                 <span class="card-title">4th & Gold Podcast</span>
               </div>
               <div class="card-content">
