--- a/index.html
+++ b/index.html
@@ -184,6 +184,22 @@
           </div>
         </div>
    
+        <div class="row">
+          <div class="col m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/logo2.jpg" height= "200px" width="200px">
+                <span class="card-title">ShinDig made with REACT</span>
+              </div>
+              <div class="card-content">
+                <p></p>
+              </div>
+              <div class="card-action">
+                <a href="https://shindig-develop-devj.herokuapp.com/">ShinDig </a>
+              </div>
+            </div>
+          </div>
+        </div>
 
   </section>
 
